# alfred-assistant

./: .env.example  .gitignore  Makefile  docker-compose.yml
admin-panel/: package.json
admin-panel/src/app/: layout.tsx  page.tsx
admin-panel/src/app/audit/: page.tsx
admin-panel/src/app/login/: page.tsx
admin-panel/src/app/secrets/: page.tsx
admin-panel/src/app/settings/: page.tsx
admin-panel/src/components/: auth-guard.tsx  shell.tsx  sidebar.tsx
admin-panel/src/lib/: api.ts  utils.ts
docs/: ARCHITECTURE.md  SECURITY.md  SETUP_CHECKLIST.md
gateway/: Dockerfile  pyproject.toml
gateway/src/: auth.py  config.py  db.py  main.py  models.py
gateway/src/routers/: agent.py  audit.py  health.py  secrets.py
gateway/src/services/: credential_injector.py  nanobot_client.py  secret_manager.py
nanobot/: Dockerfile  entrypoint.sh
nanobot/config/: base-config.json
nanobot/skills/calendar-manager/: SKILL.md
nanobot/skills/linkedin-content/: SKILL.md
nanobot/skills/obsidian-memory/: SKILL.md
nanobot/workspace/: TOOLS.md  USER.md
obsidian/: Dockerfile  server.py
obsidian/vault/: AGENTS.md  README.md  SOUL.md  alfred.md
obsidian/vault/conhecimento/: estrategia-proativa.md  linkedin-melhores-praticas.md
obsidian/vault/diarios/: 2026-02-22-primeira-conversa.md  2026-02-23-migracao-vault.md
obsidian/vault/pessoas/: Matheus Massari.md
obsidian/vault/skills/instagram-post/: SKILL.md
obsidian/vault/templates/: conversa.md  email-resposta.md  instagram-post.md  linkedin-artigo.md
scripts/: backup-vault.sh  init-secrets.sh
secrets/: README.md
